# ringi

./: .gitignore  AGENTS.md  BACKLOG.md  CHANGELOG.md  Cargo.toml  PROJECT.md  README.md  deny.toml  sync_specs.py
crates/ringi/: Cargo.toml
crates/ringi/src/: agent.rs  archive.rs  config.rs  convergence.rs  deliberate_loop.rs  deliberation.rs  dossier.rs  dossier_cli.rs  event.rs  exec.rs  lib.rs  main.rs  reconcile.rs  revision.rs  run.rs  store.rs  verify.rs
crates/ringi/tests/: cli.rs
docs/: naming.md  round-model.md
openspec/: config.yaml
openspec/changes/compose-suunta-convergence/: design.md  proposal.md  tasks.md
openspec/changes/compose-suunta-convergence/specs/deliberation-dossier/: spec.md
openspec/changes/compose-suunta-convergence/specs/deliberation-loop/: spec.md
openspec/changes/reframe-ringi-deliberation/: design.md  proposal.md  tasks.md
openspec/changes/reframe-ringi-deliberation/specs/agent-adapter/: spec.md
openspec/changes/reframe-ringi-deliberation/specs/arbitration-strategy/: spec.md
openspec/changes/reframe-ringi-deliberation/specs/builder-execution/: spec.md
openspec/changes/reframe-ringi-deliberation/specs/cli-run/: spec.md
openspec/changes/reframe-ringi-deliberation/specs/deliberation-dossier/: spec.md
openspec/changes/reframe-ringi-deliberation/specs/deliberation-loop/: spec.md
openspec/changes/reframe-ringi-deliberation/specs/dossier-archive/: spec.md
openspec/changes/reframe-ringi-deliberation/specs/dossier-assembly/: spec.md
openspec/changes/reframe-ringi-deliberation/specs/dossier-cli/: spec.md
openspec/specs/agent-adapter/: spec.md
openspec/specs/arbitration-strategy/: spec.md
openspec/specs/builder-execution/: spec.md
openspec/specs/cli-run/: spec.md
openspec/specs/deliberation-dossier/: spec.md
openspec/specs/deliberation-loop/: spec.md
openspec/specs/dossier-archive/: spec.md
openspec/specs/dossier-assembly/: spec.md
openspec/specs/dossier-cli/: spec.md
openspec/specs/durable-dossiers/: spec.md
openspec/specs/durable-registry/: spec.md
openspec/specs/durable-runs/: spec.md
openspec/specs/human-decision/: spec.md
openspec/specs/naming-worldview/: spec.md
openspec/specs/reconcile-loop/: spec.md
openspec/specs/resumable-dossiers/: spec.md
openspec/specs/resumable-runs/: spec.md
openspec/specs/reviewer-execution/: spec.md
openspec/specs/run-assembly/: spec.md
openspec/specs/verification/: spec.md
scripts/: naming-guard.sh
(+9 files in other folders)
