[workspace]
resolver = "2"
members = ["crates/ringi"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tacticaldoll/ringi"

[workspace.dependencies]
# Published family facades composed by ringi: pacta owns lifecycle, suunta owns convergence,
# and shaahid owns idempotency.
pacta = "0.2.2"
pacta-memory = "0.2.2"
pacta-conformance = "0.2.2"
rusqlite = { version = "0.32", features = ["bundled"] }
suunta = "0.1.1"
shaahid = "0.1.1"
uuid = { version = "1", features = ["v5"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
wait-timeout = "0.2"
