[package]
name = "ringi"
description = "A local automation orchestrator that drives Agent CLIs through a durable, gated build-review-verify loop."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pacta.workspace = true
pacta-memory.workspace = true
suunta.workspace = true
shaahid.workspace = true
uuid.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
wait-timeout.workspace = true
clap.workspace = true
anyhow.workspace = true

[dev-dependencies]
pacta-conformance.workspace = true
